RESOLVED FIXED136308
WebKit2 swipe gesture should report the position of the snapshot to the client
https://bugs.webkit.org/show_bug.cgi?id=136308
Summary WebKit2 swipe gesture should report the position of the snapshot to the client
Tim Horton
Reported 2014-08-27 14:07:36 PDT
Add SPI to tell the client where the snapshot is. rdar://problem/18105827
Attachments
patch (11.20 KB, patch)
2014-08-27 14:09 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2014-08-27 14:09:01 PDT
WebKit Commit Bot
Comment 2 2014-08-27 14:11:59 PDT
Attachment 237248 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/PageClientImpl.h:112: The parameter name "layer" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3 2014-08-27 17:39:27 PDT
Comment on attachment 237248 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=237248&action=review > Source/WebKit2/UIProcess/PageClient.h:234 > + virtual CGRect boundsOfLayerInLayerBackedWindowCoordinates(CALayer *) = 0; const? > Source/WebKit2/UIProcess/WebPageProxy.h:512 > + CGRect boundsOfLayerInLayerBackedWindowCoordinates(CALayer *); const? > Source/WebKit2/UIProcess/mac/PageClientImpl.h:112 > + CGRect boundsOfLayerInLayerBackedWindowCoordinates(CALayer *layer); const?
Tim Horton
Comment 4 2014-08-27 18:24:33 PDT
Note You need to log in before you can comment on or make changes to this bug.